# yt-mp3-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: cd.yml  ci.yml
infra/: apigateway.tf  cloudwatch.tf  fargate.tf  iam_dev_user.tf  lambda.tf  network.tf  outputs.tf  provider.tf  s3.tf  variables.tf
scripts/: bootstrap-aws.sh  iam-policy.json
src/lambda/: handler.py
src/shared/: converter.py  downloader.py
src/worker/: worker.py
