
[project]
name = "yt-mp3-api"
version = "0.1.0"
description = "Backend API para descarga de YouTube a MP3 con Lambda y Fargate"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pip-tools]
generate-hashes = false
